# EMOCT

./: .gitignore  ART.cpp  ART.h  ART_Main.cpp  CMakeCache.txt  CMakeLists.txt  CTUtility.cpp  CTUtility.h  CUDAMath.h  DensityDistribution.cpp  DensityDistribution.h  EMO.cpp  EMO.h  EMOCT  EMOCT.cbp  GACT.cpp  GACT.h  INVERSE  InverseDomain.cpp  InverseDomain.h  Makefile  MersenneTwister.h  ProjectionData.cpp  ProjectionData.h  README.md  Thumbs.db  Xorshift.h  cmake_install.cmake  div_eachangle.csv  evolution.csv  ga2k.cpp  ga2k.h  gact_main.cpp  ilab.h  main.cpp  mtrand.cpp  mtrand.h  pdata.prj
experiment_data/: no_object(196,196,1)-1.cfd  no_object(196,196,1).cfd  no_object(196,196,1)_normalize.cfd  no_object(196,196,1)_outsize0.cfd
experiment_data/another_layer/: no_object(196,196,1)layer35-1.cfd  no_object(196,196,1)layer35.cfd
ga2k_example/: ga2k.h  ga2k_main.cpp
ilab/: art.h  distribution.h  projection.h  projector.h
libs/: table.h
p_data/: no_object(196,196,1)_15.000000deg.prj  no_object(196,196,1)_15deg.prj  no_object(196,196,1)_20deg.prj  no_object(196,196,1)_30.000000deg.prj  no_object(196,196,1)_30deg.prj  no_object(197,197,70)_10deg.prj  no_object(197,197,70)_15deg.prj  no_object(197,197,70)_20deg.prj  no_object(197,197,70)_30deg.prj  no_object(197,197,70)_45deg.prj  no_object_missing197,197,70)_4.prj
p_data/-1projections/: no_object(196,196,1)_10.000000deg.prj  no_object(196,196,1)_20.000000deg.prj  no_object(196,196,1)_45.000000deg.prj  no_object(196,196,1)_5.000000deg.prj
p_data/layer_35/: no_object(196,196,1)_10.000000deg.prj  no_object(196,196,1)_20.000000deg.prj  no_object(196,196,1)_30.000000deg.prj  no_object(196,196,1)_45.000000deg.prj  no_object(196,196,1)_5.000000deg.prj
